@@ -49,6 +49,7 @@ module glide_thck
   real, private, parameter    :: picard_interval=500.
   integer, private            :: picard_max=0
 #endif
+
 contains
 
   subroutine init_thck(model)
@@ -173,6 +174,23 @@ contains
        ! do Picard iteration
        do p=1,pmax
           model%thckwk%oldthck2 = model%geometry%thck
+
+          call stagvarb(model%geometry% thck, &
+               model%geomderv% stagthck,&
+               model%general%  ewn, &
+               model%general%  nsn)
+
+          call geomders(model%numerics, &
+               model%geometry% usrf, &
+               model%geomderv% stagthck,&
+               model%geomderv% dusrfdew, &
+               model%geomderv% dusrfdns)
+
+          call geomders(model%numerics, &
+               model%geometry% thck, &
+               model%geomderv% stagthck,&
+               model%geomderv% dthckdew, &
+               model%geomderv% dthckdns)
 
           call slipvelo(model,                &
                2,model%options%whichbtrc,     &
@@ -343,27 +361,10 @@ contains
 #endif
        
        !------------------------------------------------------------
-       ! calculate upper and lower surface and various derivatives
+       ! calculate upper and lower surface
        !------------------------------------------------------------
        call glide_calclsrf(model%geometry%thck, model%geometry%topg, model%climate%eus, model%geometry%lsrf)
        model%geometry%usrf = max(0.d0,model%geometry%thck + model%geometry%lsrf)
-
-       call stagvarb(model%geometry% thck, &
-            model%geomderv% stagthck,&
-            model%general%  ewn, &
-            model%general%  nsn)
-
-       call geomders(model%numerics, &
-            model%geometry% usrf, &
-            model%geomderv% stagthck,&
-            model%geomderv% dusrfdew, &
-            model%geomderv% dusrfdns)
-
-       call geomders(model%numerics, &
-            model%geometry% thck, &
-            model%geomderv% stagthck,&
-            model%geomderv% dthckdew, &
-            model%geomderv% dthckdns)
 
   contains
     subroutine generate_row(ewm,ew,ewp,nsm,ns,nsp)
