@@ -1,3 +1,6 @@
+2005-06-08 Magnus Hagdorn
+ * glide_thck.f90: fixed bug #132, extreme velos.
+
 2005-05-18 Ian Rutt
  * Bug-fix changes to couple to Energy-balance mass-balance model
  * Added instantaneous outputting of mass-balance coupling fields,
